cambio a botones circulares y compilacion para android

--- a/apps/mobile-maui/DeckBrew.Mobile/DeckBrew.Mobile.csproj
+++ b/apps/mobile-maui/DeckBrew.Mobile/DeckBrew.Mobile.csproj
@@ -15,6 +15,7 @@
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.19041.0</SupportedOSPlatformVersion>
     <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.19041.0</TargetPlatformMinVersion>
     <WindowsPackageType Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">None</WindowsPackageType>
+    <!-- <Platforms>AnyCPU;ARM32;ARM64</Platforms> -->
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Maui.Controls" Version="10.0.11" />
