--- a/src/DeckBrew.Api/DeckBrew.Api.csproj
+++ b/src/DeckBrew.Api/DeckBrew.Api.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;ARM32;ARM64</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\DeckBrew.Application\DeckBrew.Application.csproj" />
