--- a/src/DeckBrew.Contracts/DeckBrew.Contracts.csproj
+++ b/src/DeckBrew.Contracts/DeckBrew.Contracts.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;ARM32;ARM64</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Refit" Version="7.2.22" />
