--- a/src/DeckBrew.Domain/DeckBrew.Domain.csproj
+++ b/src/DeckBrew.Domain/DeckBrew.Domain.csproj
@@ -2,5 +2,6 @@
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;ARM32;ARM64</Platforms>
   </PropertyGroup>
 </Project>
